--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v1",
   "version": "1.0.0",
-  "description": "Yelpcamp version 1",
+  "description": "Go Glamping",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
